--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yang Hai</name>
               </p>
-              <p>I am a master student at Xidian University, supervised by Dr. <a herf="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. <a herf="https://web.xidian.edu.cn/songrui/index.html">Rui Song</a>.
+              <p>I am a master student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. <a href="https://web.xidian.edu.cn/songrui/index.html">Rui Song</a>.
               </p>
               <p>
                 My research interest lies in Computer Vision and Deep learning. In particular, I am interested in 3D scene understanding in a self-supervised manner.
@@ -43,7 +43,7 @@
               <heading>Experience</heading>
               <ul>
                 <li><p>
-                  2021.03-2021.09. Research intern at Sensetime. Work closely with <a herf="https://scholar.google.com/citations?hl=zh-CN&user=btgwZosAAAAJ">Zhaoyang Liu</a>.
+                  2021.03-2021.09. Research intern at Sensetime. Work closely with <a href="https://scholar.google.com/citations?hl=zh-CN&user=btgwZosAAAAJ">Zhaoyang Liu</a>.
                 </p></li>
                 <li><p>
                   2021.06. Gradute from Xidian University, ranking 5%.
@@ -52,7 +52,7 @@
             </td>
           </tr>
         </tbody></table>
-        
+
       </td>
     </tr>
   </table>
