--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Yang Hai</name>
+                <name>Yang Hai(海洋)</name>
               </p>
               <p>I am a master student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. <a href="https://web.xidian.edu.cn/songrui/index.html">Rui Song</a>.
               </p>
