--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <p style="text-align:center">
                 <name>Yang Hai(海洋)</name>
               </p>
-              <p>I am a master student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. <a href="https://web.xidian.edu.cn/songrui/index.html">Rui Song</a>.
+              <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. <a href="https://web.xidian.edu.cn/songrui/index.html">Rui Song</a>.
               </p>
               <p>
-                My research interest lies in Computer Vision and Deep learning. In particular, I am interested in 3D scene understanding in a self-supervised manner.
+                My research interest lies in Computer Vision and Deep learning. Recently, I have been working on 6D pose estimation.
               </p>
               <p style="text-align:center">
                 <a href="Yanghai1218@gmail.com">Email</a> &nbsp/&nbsp
@@ -43,7 +43,7 @@
               <heading>Experience</heading>
               <ul>
                 <li><p>
-                  2021.03-2021.09. Research intern at Sensetime. Work closely with <a href="https://scholar.google.com/citations?hl=zh-CN&user=btgwZosAAAAJ">Zhaoyang Liu</a>.
+                  2021.03-2021.09. Research intern at Sensetime, working closely with <a href="https://scholar.google.com/citations?hl=zh-CN&user=btgwZosAAAAJ">Zhaoyang Liu</a>.
                 </p></li>
                 <li><p>
                   2021.06. Gradute from Xidian University, ranking 5%.
