--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
           </tr>
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>News</heading>
+            <ul>
+              <li><p>
+                2022.10.16 We won the Best Sigle-Model Method award in the 2022 BOP Challenge.
+              </p></li>
+            </ul>
+          </td>
+        </tr>
+      </tbody></table>
+
       </td>
     </tr>
   </table>
