--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <heading>News</heading>
             <ul>
               <li><p>
-                2022.10.16 We won the Best Sigle-Model Method award in the 2022 BOP Challenge.
+                2022.10.16. We won the Best Single-Model Method award in the 2022 BOP Challenge.
               </p></li>
             </ul>
           </td>
