--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <heading>News</heading>
             <ul>
               <li><p>
-                2022.10.16. We won the Best Single-Model Method award and the Best Method on LM-O in the BOP Challenge 2022.
+                2022.10. We won the Best Single-Model Method and the Best Method on LM-O in the BOP Challenge 2022. [<a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>] 
               </p></li>
             </ul>
           </td>
