--- a/index.html
+++ b/index.html
@@ -36,7 +36,25 @@
           </tr>
         </tbody></table>
         
-        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Publicition</heading>
+            <ul>
+              <li><p>
+                Yang Hai, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation.
+                IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
+              </p></li>
+              <li><p>
+                Yang Hai, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation.
+                IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
+              </p></li>
+            </ul>
+          </td>
+        </tr>
+      </tbody></table>
+
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
