--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <heading>Publications</heading>
             <ul>
               <li><p>
-                Yang Hai, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation.
+                <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation.
                 IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
               </p></li>
               <li><p>
-                Yang Hai, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation.
+                <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation.
                 IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
               </p></li>
             </ul>
