--- a/index.html
+++ b/index.html
@@ -36,40 +36,6 @@
           </tr>
         </tbody></table>
         
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Publications</heading>
-            <ul>
-              <li><p>
-                <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation.
-                IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
-              </p></li>
-              <li><p>
-                <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation.
-                IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
-              </p></li>
-            </ul>
-          </td>
-        </tr>
-      </tbody></table>
-
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Experience</heading>
-              <ul>
-                <li><p>
-                  2021.03-2021.09. Research intern at Sensetime, working closely with <a href="https://scholar.google.com/citations?hl=zh-CN&user=btgwZosAAAAJ">Zhaoyang Liu</a>.
-                </p></li>
-                <li><p>
-                  2021.06. Gradute from Xidian University, ranking 5%.
-                </p></li>
-              </ul>
-            </td>
-          </tr>
-        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -77,12 +43,49 @@
             <heading>News</heading>
             <ul>
               <li><p>
-                2022.10. We won the Best Single-Model Method and the Best Method on LM-O in the BOP Challenge 2022. [<a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>] 
+                2022.10. We win the Best Single-Model Method and the Best Method on LM-O in the BOP Challenge 2022. [<a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>]
+              </p></li>
+              <li><p>
+                2022.02. Two papers are accepted by CVPR 2023.
               </p></li>
             </ul>
           </td>
         </tr>
       </tbody></table>
+
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+        <td style="padding:20px;width:100%;vertical-align:middle">
+          <heading>Experience</heading>
+          <ul>
+            <li><p>
+              2021.03-2021.09. Research intern at Sensetime, working closely with <a href="https://scholar.google.com/citations?hl=zh-CN&user=btgwZosAAAAJ">Zhaoyang Liu</a>.
+            </p></li>
+            <li><p>
+              2021.06. Gradute from Xidian University, ranking 5%.
+            </p></li>
+          </ul>
+        </td>
+      </tr>
+    </tbody></table>
+
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <tr>
+      <td style="padding:20px;width:100%;vertical-align:middle">
+        <heading>Publications</heading>
+        <ul>
+          <li><p>
+            <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation.
+            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
+          </p></li>
+          <li><p>
+            <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation.
+            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
+          </p></li>
+        </ul>
+      </td>
+    </tr>
+  </tbody></table>
 
       </td>
     </tr>
