--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <ul>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation.
-            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023
+            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <a href="http://arxiv.org/abs/2303.12396">[PDF]</a> <a href="https://github.com/YangHai-1218/RADet">[Code]</a>
           </p></li>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation.
