--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yang Hai(海洋)</name>
               </p>
-              <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. <a href="https://web.xidian.edu.cn/songrui/index.html">Rui Song</a>.
+              <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a>.
               </p>
               <p>
                 My research interest lies in Computer Vision and Deep learning. Recently, I have been working on 6D pose estimation.
