--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yang Hai(海洋)</name>
               </p>
-              <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a>.
+              <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. Rui Song.
               </p>
               <p>
                 My research interest lies in Computer Vision and Deep learning. Recently, I have been working on 6D pose estimation.
@@ -43,10 +43,10 @@
             <heading>News</heading>
             <ul>
               <li><p>
-                2022.10. We win the Best Single-Model Method and the Best Method on LM-O in the BOP Challenge 2022. [<a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>]
+                2023.02. Two papers are accepted by CVPR 2023.
               </p></li>
               <li><p>
-                2023.02. Two papers are accepted by CVPR 2023.
+                2022.10. We win the Best Single-Model Method and the Best Method on LM-O in the BOP Challenge 2022. [<a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>]
               </p></li>
             </ul>
           </td>
