--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
               <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. Rui Song.
               </p>
               <p>
-                My research interest lies in Computer Vision and Deep learning. Recently, I have been working on 6D pose estimation.
+                My research interest lies in Computer Vision and Deep learning. Recently, I have been working on pose estimation and neural rendereing.
               </p>
               <p style="text-align:center">
                 <a href="Yanghai1218@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="https://github.com/YangHai-1218">Github</a>
+                <a href="https://github.com/YangHai-1218">Github</a>&nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=_lIsdesAAAAJ&hl=en">Google Schloar</a>
               </p>
             </td>
             <td style="padding:2.5%;width:25%;max-width:40%">
