--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. Rui Song.
               </p>
               <p>
-                My research interest lies in Computer Vision and Deep learning. Recently, I have been working on pose estimation and neural rendereing.
+                My research interest lies in Computer Vision and Deep learning. Recently, I have been working on pose estimation and neural rendering.
               </p>
               <p style="text-align:center">
                 <a href="Yanghai1218@gmail.com">Email</a> &nbsp/&nbsp
