add iccv2023 paper&code

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <heading>News</heading>
             <ul>
               <li><p>
+                2023.07. One paper is accepted by ICCV 2023.
+              </p></li>
+              <li><p>
                 2023.02. Two papers are accepted by CVPR 2023.
               </p></li>
               <li><p>
@@ -76,11 +79,15 @@
         <heading>Publications</heading>
         <ul>
           <li><p>
-            <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation.
+            <b>Yang Hai</b>, Rui Song, Jiaojiao Li, David Ferstl, Yinlin Hu. Pseudo Flow Consistency for Self-Supervised 6D Object Pose Estimation.
+            Interional Conference on Computer Vision (ICCV), 2023. <a href="https://arxiv.org/abs/2308.10016">[PDF]</a> <a href="https://github.com/YangHai-1218/PseudoFlow">[Code]</a>
+          </p></li>
+          <li><p>
+            <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation. 
             IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <a href="http://arxiv.org/abs/2303.12396">[PDF]</a> <a href="https://github.com/YangHai-1218/RADet">[Code]</a>
           </p></li>
           <li><p>
-            <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation.
+            <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation. 
             IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <a href="https://arxiv.org/abs/2306.13266">[PDF]</a> <a href="https://github.com/YangHai-1218/SCFlow">[Code]</a>
           </p></li>
         </ul>
