--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <ul>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, David Ferstl, Yinlin Hu. Pseudo Flow Consistency for Self-Supervised 6D Object Pose Estimation.
-            Interional Conference on Computer Vision (ICCV), 2023. 
+            International Conference on Computer Vision (ICCV), 2023. 
           </p></li>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation. 
