add cvpr2023 poster and video

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
           </p></li>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation. 
-            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <a href="http://arxiv.org/abs/2303.12396">[PDF]</a> <a href="https://github.com/YangHai-1218/RADet">[Code]</a>
+            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <a href="http://arxiv.org/abs/2303.12396">[PDF]</a> <a href="https://github.com/YangHai-1218/RADet">[Code]</a> <a href="publications/RADet-Poster.png">[Poster]</a> <a href="https://www.youtube.com/watch?v=XgDFmE8AL_Y&t=9s">[Video]</a>
           </p></li>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Yinlin Hu. Shape-Constraint Recurrent Flow for 6D Object Pose Estimation. 
-            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <a href="https://arxiv.org/abs/2306.13266">[PDF]</a> <a href="https://github.com/YangHai-1218/SCFlow">[Code]</a>
+            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2023. <a href="https://arxiv.org/abs/2306.13266">[PDF]</a> <a href="https://github.com/YangHai-1218/SCFlow">[Code]</a> <a href="publications/SCFlow-Poster.png">[Poster]</a> <a href="https://www.youtube.com/watch?v=wLba5ED_TS4&t=12s">[Video]</a>
           </p></li>
         </ul>
       </td>
