--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yang Hai(海洋)</name>
               </p>
-              <p>I am a second-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. Rui Song.
+              <p>I am a final-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. Rui Song.
               </p>
               <p>
                 My research interest lies in Computer Vision and Deep learning. Recently, I have been working on pose estimation and neural rendering.
@@ -80,7 +80,7 @@
         <ul>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, David Ferstl, Yinlin Hu. Pseudo Flow Consistency for Self-Supervised 6D Object Pose Estimation.
-            International Conference on Computer Vision (ICCV), 2023. <a href="https://arxiv.org/abs/2308.10016">[PDF]</a> <a href="https://github.com/YangHai-1218/PseudoFlow">[Code]</a>
+            International Conference on Computer Vision (ICCV), 2023. <a href="https://arxiv.org/abs/2308.10016">[PDF]</a> <a href="https://github.com/YangHai-1218/PseudoFlow">[Code]</a> <a href="publications/PseudoFlow-poster.pdf">[Poster]</a> <a href="https://www.youtube.com/watch?v=wjm4hLTn5Bw">[Video]</a>
           </p></li>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, Mathieu Salzmann, Yinlin Hu. Rigidity-Aware Detection for 6D Object Pose Estimation. 
