--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <heading>News</heading>
             <ul>
               <li><p>
+                2023.11. I am going to join <a href="https://www.insta360.com">Insta360</a> as a research engineer.
+              </p></li>
+              <li><p>
                 2023.07. One paper is accepted by ICCV 2023.
               </p></li>
               <li><p>
