--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Yang Hai(海洋)</name>
               </p>
-              <p>I am a final-year M.Sc. student at Xidian University, supervised by Dr. <a href="https://yinlinhu.github.io">Yinlin Hu</a> and Prof. Rui Song.
+              <p>I am a full-time researcher at Insta360.
               </p>
               <p>
                 My research interest lies in Computer Vision and Deep learning. Recently, I have been working on pose estimation and neural rendering.
@@ -81,6 +81,10 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <heading>Publications</heading>
         <ul>
+          <li><p>
+            <b>Yang Hai</b>, Guo Wang, Tan Su, Wenjie jiang, Yinlin Hu. Hierarchical Flow Diffusion for Efficient Frame Interpolation.
+            IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2025.
+          </p></li>
           <li><p>
             <b>Yang Hai</b>, Rui Song, Jiaojiao Li, David Ferstl, Yinlin Hu. Pseudo Flow Consistency for Self-Supervised 6D Object Pose Estimation.
             International Conference on Computer Vision (ICCV), 2023. <a href="https://arxiv.org/abs/2308.10016">[PDF]</a> <a href="https://github.com/YangHai-1218/PseudoFlow">[Code]</a> <a href="publications/PseudoFlow-poster.pdf">[Poster]</a> <a href="https://www.youtube.com/watch?v=wjm4hLTn5Bw">[Video]</a>
